fix style nowrap

--- a/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
+++ b/client/scss/Widgets/DiagramDesigner/DiagramDesignerWidget.scss
@@ -201,6 +201,7 @@ $rotation-deg-color: #666666;
       div.c-text {
         position: absolute;
         font-size: 10px;
+        white-space: nowrap;
 
         .c-name {
           position: relative;
